--- a/src/app/Components/Product/edit-product/edit-product.component.css
+++ b/src/app/Components/Product/edit-product/edit-product.component.css
@@ -14,3 +14,9 @@ textarea {
     border: 1px rgb(221, 221, 221) solid;
     padding: 1rem;
 }
+
+.imageContainer {
+    height: 160px;
+    margin: auto;
+    background-color: black;
+}
