--- a/src/app/Components/Product/list-product/list-product.component.css
+++ b/src/app/Components/Product/list-product/list-product.component.css
@@ -29,3 +29,12 @@ thead {
     background: rgb(172, 25, 173) !important;
     border-radius: 20px !important;
 }
+
+.list-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.list-header input {
+    width: 35%;
+}
