--- a/src/app/Components/Product/add-Product/add-product.component.css
+++ b/src/app/Components/Product/add-Product/add-product.component.css
@@ -8,6 +8,7 @@ h3 {
     background-color: #ffffff;
     border-radius: 5px;
     padding: 1rem;
+    box-shadow: 0px 0px 4px rgb(173, 5, 173);
 }
 
 textarea {
