--- a/src/app/Components/Product/list-product/list-product.component.html
+++ b/src/app/Components/Product/list-product/list-product.component.html
@@ -1,40 +1,50 @@
 <section class="ftco-section mt-2">
+
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="list-header">
+            <input type="text" [(ngModel)]="filter" placeholder="Filtre Par Nom " class="form-control ">
+            <div>
+                <button class="btn btn-primary text-capitalize " [routerLink]="[ '/home/product/add'] " style="margin-right: 1vw; ">Ajouter un Produit</button>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="table-wrap">
-                    <table class="table">
-                        <thead class="thead-primary" style="background-color: rgb(173, 5, 173);">
+
+        <p style="font-size: .8rem;">
+            Nombre des Produit : {{listProduct.length}}
+        </p>
+        <div class="row justify-content-center ">
+        </div>
+        <div class="row ">
+            <div class="col-md-12 ">
+                <div class="table-wrap ">
+                    <table class="table ">
+                        <thead class="thead-primary " style="background-color: rgb(173, 5, 173); ">
                             <tr>
                                 <th>&nbsp;</th>
                                 <th>Produit</th>
                                 <th>Prix</th>
-                                <th>Quantity en stock </th>
+                                <th>Quantity </th>
                                 <th>&nbsp;</th>
                                 <th>&nbsp;</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let product of listProduct | paginate: { itemsPerPage: 7, 
-                                currentPage: p,totalItems: listProduct.length }" class="alert" role="alert">
+                            <tr *ngFor="let product of listProduct |filter :'name':filter | paginate: { itemsPerPage: 6, currentPage: p,totalItems: listProduct.length } " class="alert " role="alert ">
                                 <td>
-                                    <img class="img" [src]="product.image" [alt]="product.name">
+                                    <img class="img " [src]="product.image " [alt]="product.name ">
                                 </td>
-                                <td class="border-bottom-0">
-                                    <div class="email">
+                                <td class="border-bottom-0 ">
+                                    <div class="email ">
                                         <span>{{product.name | titlecase}} </span>
                                         <span>{{product.description | ellipsis:10 | titlecase}}</span>
                                     </div>
                                 </td>
-                                <td class="border-bottom-0">{{product.price | number:'.1-3'}} Dhs</td>
-                                <td class="border-bottom-0">{{product.quantityStock}}</td>
-                                <td class="border-bottom-0">
-                                    <i (click)="delete(product.id)" style="cursor: pointer;" class=" fa fa-trash fa-lg"></i>
+                                <td class="border-bottom-0 ">{{product.price | number:'.1-3'}} Dhs</td>
+                                <td class="border-bottom-0 ">{{product.quantityStock}}</td>
+                                <td class="border-bottom-0 ">
+                                    <i (click)="delete(product.id) " style="cursor: pointer; " class=" fa fa-trash fa-lg "></i>
                                 </td>
-                                <td class="border-bottom-0">
-                                    <i (click)="update(product.id)" style="cursor: pointer;" class="fa fa-pencil fa-lg"></i>
+                                <td class="border-bottom-0 ">
+                                    <i (click)="update(product.id) " style="cursor: pointer; " class="fa fa-pencil fa-lg "></i>
                                 </td>
                             </tr>
                         </tbody>
@@ -44,4 +54,4 @@
         </div>
     </div>
 </section>
-<pagination-controls directionLinks="true" previousLabel="" nextLabel='' (pageChange)="pagechangeHandler($event) "></pagination-controls>
+<pagination-controls *ngIf="filter.length===0 || listProduct.length===0" directionLinks="true " previousLabel=" " nextLabel='' (pageChange)="pagechangeHandler($event) "></pagination-controls>
