--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -38,8 +38,8 @@
                         <p>Fournisseur</p>
                     </a>
                 </li>
-                <li class="nav-item " routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">
-                    <a class="nav-link" routerLink="products">
+                <li class="nav-item " routerLinkActive="active">
+                    <a class="nav-link" routerLink="/home/products">
                         <i class="material-icons">bubble_chart</i>
                         <p>Produits</p>
                     </a>
