--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper" style="background-color: white;">
     <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
         <div class="logo"><a href="http://www.creative-tim.com" class="simple-text logo-normal">
-          Creative Tim
+            stock Management
         </a></div>
         <div class="sidebar-wrapper">
             <ul class="nav">
@@ -26,13 +26,13 @@
                     </a>
                 </li>
 
-                <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">
+                <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="employee">
                         <i class="material-icons">content_paste</i>
                         <p>Employé</p>
                     </a>
                 </li>
-                <li class="nav-item " routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">
+                <li class="nav-item " routerLinkActive="active">
                     <a class="nav-link" routerLink="suppliers">
                         <i class="material-icons">library_books</i>
                         <p>Fournisseur</p>
