--- a/src/app/Components/order/detail-order/detail-order.component.html
+++ b/src/app/Components/order/detail-order/detail-order.component.html
@@ -1,23 +1,33 @@
 <div class="container mt-5 mb-5">
     <div class="">
-            
-            <div class="row">
-                <div class="col-md-3 my-3">
-                    <h3>Informations</h3>
-                </div>
-                <div class="col-md-6"></div>
-                <div class="col-md-3 mt-4 strong">
-                    {{ data?.orderDate  | date}}
-                </div>    
-            </div>
-            
-            <div class="col-md-5">
-                <span class="mr-3 strong">Destinataire    :</span> <span class="mr-2">{{ data.customer?.firstname }} {{ data.customer?.lastname }}</span><br>
-                <span class="mr-3 strong">Adresse    :</span> <span class="mr-2">{{ data.customer?.address }}</span><br>
-                <span class="mr-3 strong">Adresse email    :</span> <span class="mr-2">{{ data.customer?.email }}</span><br>
-            </div>
 
-            
+        <div class="col-md-3 ">
+            <h3>Informations</h3>
+        </div>
+        <div class="card">
+            <div class="card-body row">
+                <div class="col-md-5">
+                    <span class="mr-3 strong">Destinataire :</span> <span class="mr-2">{{ data?.customer.firstname }} {{
+                        data?.customer.lastname }}</span><br>
+                    <span class="mr-3 strong">Adresse :</span> <span class="mr-2">{{ data?.customer.address }}</span><br>
+                    <span class="mr-3 strong">Adresse email :</span> <span class="mr-2">{{ data?.customer.email
+                        }}</span><br>
+                </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3 ">
+                    <span class="mr-3 strong">Créé le :</span> <span> {{ data?.orderDate | date}} </span>
+
+                    <!-- <button class="btn" (click)="imprimer()">Imprimer</button>     -->
+                    <div class="imprimer btn-primary" (click)="imprimer()">
+                        <i  class=" fa fa-print fa-lg"></i>
+    
+                        </div>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
 
 
@@ -43,13 +53,13 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let item of data.orderProducts" class="alert" role="alert">
+                            <tr *ngFor="let item of data?.orderProducts" class="alert" role="alert">
                                 <td>
                                     <!-- <img class="img" [src]="product.image" [alt]="product.name"> -->
                                 </td>
 
                                 <td class="border-bottom-0">
-                                        {{item.product.name | titlecase}} 
+                                    {{item.product.name | titlecase}}
                                 </td>
                                 <td class="border-bottom-0">
                                     {{item.product.description | titlecase}}
@@ -59,7 +69,7 @@
                                 <td class="border-bottom-0">{{item.quantity}}</td>
                                 <td class="border-bottom-0">{{item.totalHT}}</td>
 
-                              
+
                             </tr>
                         </tbody>
                     </table>
@@ -67,7 +77,7 @@
             </div>
 
 
-            
+
         </div>
 
         <div class="row">
@@ -75,12 +85,12 @@
             <div class="col-md-6 totals text-right">
                 <div class="row  ">
                     <div class="col-md-3">
-                    <h4 class="strong">Total HT</h4> 
-                    <h4 class="strong">Total TTC</h4> 
+                        <h4 class="strong">Total HT</h4>
+                        <h4 class="strong">Total TTC</h4>
                     </div>
                     <div class="col-md-3">
-                        <h4>{{ data.totalht }} DH</h4>
-                        <h4>{{ data.total }} DH</h4>
+                        <h4>{{ data?.totalht }} DH</h4>
+                        <h4>{{ data?.total }} DH</h4>
                     </div>
                 </div>
             </div>
