--- a/src/app/Components/Customer/list-customer/list-customer.component.html
+++ b/src/app/Components/Customer/list-customer/list-customer.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div *ngIf="isSbmitted" class="alert" [ngClass]="{' alert-success':isTrue,' alert-danger':!isTrue}" role="alert ">
+        {{ErrorMessage}}
+    </div>
     <div class="row ">
         <div class="col-lg-12 ">
             <div class="main-box clearfix">
