--- a/src/app/Components/order/detail-order/detail-order.component.css
+++ b/src/app/Components/order/detail-order/detail-order.component.css
@@ -6,3 +6,16 @@
 h3{
     font-weight: bold;
 }
+
+.imprimer{
+    cursor: pointer;
+    margin-top: 10px;
+    width: 80%;
+    background-color: #AD05AD;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 10px;
+    border-radius: 30px;
+}
