--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper" style="background-color: white;">
     <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
-        <div class="logo"><a href="http://www.creative-tim.com" class="simple-text logo-normal">
-            stock Management
+        <div class="logo"><a class="simple-text logo-normal">
+            Stock Management
         </a></div>
         <div class="sidebar-wrapper">
             <ul class="nav">
@@ -11,14 +11,12 @@
                         <p>Home</p>
                     </a>
                 </li>
-                <li class="nav-item " [ngClass]="{'active': tabActive === 2}" (click)="switch(2)">
+                <li class="nav-item" [ngClass]="{'active': tabActive === 2}" (click)="switch(2)">
                     <a class="nav-link" routerLink="customer">
                         <i class="material-icons">person</i>
                         <p>Client</p>
                     </a>
-
                 </li>
-
                 <li class="nav-item " [ngClass]="{'active': tabActive === 3}" (click)="switch(3)">
                     <a class="nav-link" routerLink="order">
                         <i class="material-icons">content_paste</i>
@@ -44,22 +42,11 @@
                         <p>Produits</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="./map.html">
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/home/category">
                         <i class="material-icons">location_ons</i>
-                        <p>Maps</p>
-                    </a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="./notifications.html">
-                        <i class="material-icons">notifications</i>
-                        <p>Notifications</p>
-                    </a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="./rtl.html">
-                        <i class="material-icons">language</i>
-                        <p>RTL Support</p>
+                        <p> Product Catégories
+                        </p>
                     </a>
                 </li>
 
@@ -71,7 +58,7 @@
         <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
             <div class="container-fluid">
                 <div class="navbar-wrapper">
-                    <a class="navbar-brand" href="javascript:;">User Profile</a>
+                    <a class="navbar-brand">{{currentEmployee.name}}</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
@@ -80,55 +67,7 @@
             <span class="navbar-toggler-icon icon-bar"></span>
           </button>
                 <div class="collapse navbar-collapse justify-content-end">
-                    <form class="navbar-form">
-                        <div class="input-group no-border">
-                            <input type="text" value="" class="form-control" placeholder="Search...">
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                  <i class="material-icons">search</i>
-                  <div class="ripple-container"></div>
-                </button>
-                        </div>
-                    </form>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:;">
-                                <i class="material-icons">dashboard</i>
-                                <p class="d-lg-none d-md-block">
-                                    Stats
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="material-icons">notifications</i>
-                                <span class="notification">5</span>
-                                <p class="d-lg-none d-md-block">
-                                    Some Actions
-                                </p>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                                <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                                <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                                <a class="dropdown-item" href="#">Another Notification</a>
-                                <a class="dropdown-item" href="#">Another One</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="material-icons">person</i>
-                                <p class="d-lg-none d-md-block">
-                                    Account
-                                </p>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                                <a class="dropdown-item" href="#">Profile</a>
-                                <a class="dropdown-item" href="#">Settings</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Log out</a>
-                            </div>
-                        </li>
-                    </ul>
+                    <a style="cursor: pointer; color:rgb(173, 5, 173) ;" (click)="logout()">Log out</a>
                 </div>
             </div>
         </nav>
@@ -142,6 +81,5 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
