--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -5,19 +5,19 @@
         </a></div>
         <div class="sidebar-wrapper">
             <ul class="nav">
-                <li class="nav-item" [ngClass]="{'active': tabActive === 1}" (click)="switch(1)">
+                <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link">
                         <i class="material-icons">dashboard</i>
                         <p>Home</p>
                     </a>
                 </li>
-                <li class="nav-item" [ngClass]="{'active': tabActive === 2}" (click)="switch(2)">
+                <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="customer">
                         <i class="material-icons">person</i>
                         <p>Client</p>
                     </a>
                 </li>
-                <li class="nav-item " [ngClass]="{'active': tabActive === 3}" (click)="switch(3)">
+                <li class="nav-item " routerLinkActive="active">
                     <a class="nav-link" routerLink="order">
                         <i class="material-icons">content_paste</i>
                         <p>Facture</p>
